--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@vueuse/core": "^10.1.0",
-    "flowbite": "^1.6.5",
     "@headlessui/vue": "^1.7.12",
     "@heroicons/vue": "^2.0.16",
+    "@vueuse/core": "^10.1.0",
+    "axios": "^1.3.6",
+    "flowbite": "^1.6.5",
     "pinia": "^2.0.33",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
