--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "flowbite": "^1.6.5",
     "pinia": "^2.0.33",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-multiselect": "^3.0.0-beta.1",
+    "vue-router": "^4.1.6",
+    "vue-select": "^4.0.0-beta.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
