--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "vue": "^3.2.47",
     "vue-multiselect": "^3.0.0-beta.1",
     "vue-router": "^4.1.6",
+    "vue-search-select": "^3.1.0",
     "vue-select": "^4.0.0-beta.6"
   },
   "devDependencies": {
