--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@vueuse/core": "^10.1.0",
     "axios": "^1.3.6",
     "flowbite": "^1.6.5",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.33",
     "vue": "^3.2.47",
     "vue-multiselect": "^3.0.0-beta.1",
