--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "vue-multiselect": "^3.0.0-beta.1",
     "vue-router": "^4.1.6",
     "vue-search-select": "^3.1.0",
+    "vue-tailwind-datepicker": "^1.4.3",
+    "vue-currency-input": "^3.0.3",
     "vue-select": "^4.0.0-beta.6"
   },
   "devDependencies": {
