--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,13 @@
     "lodash": "^4.17.21",
     "pinia": "^2.0.33",
     "vue": "^3.2.47",
+    "vue-currency-input": "^3.0.3",
     "vue-multiselect": "^3.0.0-beta.1",
     "vue-router": "^4.1.6",
     "vue-search-select": "^3.1.0",
+    "vue-select": "^4.0.0-beta.6",
     "vue-tailwind-datepicker": "^1.4.3",
-    "vue-currency-input": "^3.0.3",
-    "vue-select": "^4.0.0-beta.6"
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
